<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

     <LinearLayout
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

    <EditText
        android:id="@+id/text_view_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:gravity="right"
        android:background="#D8E9E3"
        android:textSize="50dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage" />

     </LinearLayout>
    <LinearLayout
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/text_view">

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/line1"
         android:layout_below="@+id/text_view_edit"
         android:orientation="vertical">

    <LinearLayout
        android:id="@+id/line1_act-1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_c"
            android:textSize="50dp"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_sign"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_percent"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/line1_act-1"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_below="@id/line1_1"
        >

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/line1_2"
        >

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_7"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_9"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/line1_3"
        >

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/btn_0"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/point"
            android:textSize="50dp"
            android:onClick="onNumberClick"
            tools:ignore="ButtonStyle,SpUsage" />


    </LinearLayout>
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/line1"
        android:layout_alignTop="@+id/line1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_division"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_multiplication"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_minus"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_plus"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/btn_smooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_smooth"
            android:textSize="50dp"
            android:onClick="onOperationClick"
            tools:ignore="ButtonStyle,SpUsage" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>